--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "Spotify": {
-    "ClientId": "84a297d8ca52468188250e47faf13c2d",
-    "ClientSecret": "d6d61a8487884be4be5793c33a0f8bce",
+    "ClientId": "${CLIENT_ID}",
+    "ClientSecret": "${CLIENT_SECRET}",
     "RedirectUriLocal": "http://localhost:5292/spotify/callback",
     "RedirectUri": "https://spotify-playlists-manager.azurewebsites.net/spotify/callback",
     "AuthorizationEndpoint": "https://accounts.spotify.com/authorize",
